# cropper

./: CMakeLists.txt  README.md
cmake/: BGFXCompileShaders.cmake  SetupLib.cmake
engine/: CMakeLists.txt  main_desktop.cpp
engine/shader/shaders/cropper/: fs_cropper.sc
src/: CropperQuad.h  main.cpp
src/shader/cropper/: VertCropper.h  fs_cropper.sc
